src/App.css
.full-page > div {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 90%;
  width: 90%;
}

.full-page {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100dvh;
}

#current-location,
.grid-child {
  overflow-x: hidden;
}

.grid {
  display: grid;
  height: 100dvh;
  align-items: center;
  grid-template-columns: 100vw 100vw 100vw;
}

.grid-child {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100dvh;
}

#forecast.grid-child {
  margin-top: -50px;
}

.cards {
  display: grid;
  grid-template-columns: repeat(5, 250px);
  gap: 30px;
  align-items: none;
}

.card {
  display: grid;
  border-left: 1px solid white;
  grid-template-rows: repeat(4, 100px);
  border-radius: 20px;
  justify-items: center;
  align-items: center;
  transition: all 200ms ease-in-out;
}

.card:hover {
  transform: scale(1.1);
}

.icon {
  font-size: 100px;
}

.day-name {
  font-size: 1.5em;
  font-weight: 200;
}

.temp {
  font-size: 2em;
}

input {
  font-size: 2.5em;
  background-color: black;
  border: none;
  border-radius: 10px;
  border: 1px solid white;
  color: white;
  height: 70px;
  width: 400px;
  padding: 10px;
}

.search-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.results {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}

.results > button {
  font-size: 2em;
  background-color: black;
  border: none;
  border-radius: 10px;
  border: 1px solid white;
  color: white;
  padding: 10px;
}

@media (max-width: 480px) {
  .cards {
    display: grid;
    grid-template-columns: repeat(3, 90px);
    gap: 30px;
    align-items: none;
  }
  .card {
    display: grid;
    border-left: 1px solid white;
    grid-template-rows: repeat(4, 40px);
    border-radius: 20px;
    justify-items: center;
    align-items: center;
    transition: all 200ms ease-in-out;
  }
  .icon {
    font-size: 25px;
  }
  .day-name {
    font-size: 1em;
  }
  .description {
    font-size: 1.2em;
  }
  input {
    font-size: 1.5em;
    background-color: black;
    border: none;
    border-radius: 10px;
    border: 1px solid white;
    color: white;
    height: 30px;
    width: 200px;
    padding: 10px;
    margin-left: 30px;
  }

  .search-container {
    display: flex;
    margin-bottom: 20px;
    flex-direction: column;
    justify-content: start;
    align-items: start;
  }

  .search-container > h1 {
    margin: 0;
  }

  .results {
    grid-template-columns: 1fr;
  }

  .results > button {
    font-size: 1.5em;
  }
}

a {
  text-decoration: none;
  color: white;
  position: absolute;
  bottom: 100px;
  animation: bounce 2s infinite ease-in-out;
}

.scroller {
  font-size: 2em;
  border: 1px white solid;
  border-radius: 50%;
  padding: 10px;
  transition: all 400ms;
}

.scroller:hover {
  border-radius: 25%;
}

@keyframes bounce {
  0%,
  100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-20px);
  }
}

#current-location {
  position: relative;
}

#forecast {
  position: relative;
}

#forecast > a {
  bottom: 1px;
}

